# github-api-tools

./: CMakeLists.txt  LICENSE  README.md
AmendTitleAndApplyLabel/: AmendTitleAndApplyLabel.pro  CMakeLists.txt  README.md  issueatrributes.cpp  issueatrributes.h  issuegatherer.cpp  issuegatherer.h  issueupdater.cpp  issueupdater.h  labelcreator.cpp  labelcreator.h  labelgatherer.cpp  labelgatherer.h  main.cpp  postdownloader.cpp  postdownloader.h  programoptions.cpp  programoptions.h
MassCloseOldIssues/: CMakeLists.txt  LICENSE  MassCloseOldIssues.pro  README.md  issuegatherer.cpp  issuegatherer.h  issueupdater.cpp  issueupdater.h  labelcreator.cpp  labelcreator.h  labelgatherer.cpp  labelgatherer.h  main.cpp  postdownloader.cpp  postdownloader.h  programoptions.cpp  programoptions.h
cmake/Modules/: FeatureOptionsSetup.cmake
